Correcciones en generaciónd e swagger, documentos, validación de campos
