# application/models/integracion_swagger.php
@@ -34,22 +34,20 @@ class Swagger {
             $data_salida = "";
             $form = $formulario[0];
             $campos = $form["form"];
+            
             foreach($campos["campos"] as $campo){
-                
                 log_message('debug',$campo['nombre']." -> ".$campo['direccion']);
+                if ( $campo['direccion'] == 'OUT'){
+                    continue;  //Se debe especificar directamente si es de salida. 
+                }
                 //Campo tipo file será tratado como string asumiendo que el archivo viene en base64
-                if($campo['direccion']=='IN' && $data_entrada != "") 
+                if($data_entrada != "" ) 
                     $data_entrada .= ",";
-                if($campo['direccion']=='OUT' && $data_salida != "" )  
-                    $data_salida .= ",";
-              
-                
+
                 if($campo["tipo"] == "string" ){
-                    ($campo['direccion']!='OUT') ? ($data_entrada .= "\"".$campo["nombre"]."\": {\"type\": \"string\"}"):
-                        ($data_salida .= "\"".$campo["nombre"]."\": {\"type\": \"string\"}");
+                    $data_entrada .= "\"".$campo["nombre"]."\": {\"type\": \"string\"}";
                 }else if($campo["tipo"] == "base64"){
-                    ($campo['direccion']!='OUT') ? ($data_entrada .= "\"".$campo["nombre"]."\": {\"type\": \"string\"}"):
-                        ($data_salida .= "\"".$campo["nombre"]."\": {\"type\": \"string\",\"format\": \"base64\"}");
+                    $data_entrada .= "\"".$campo["nombre"]."\":".json_encode(array('type'=>'string','format'=>'base64')); //{\"type\": \"string\"}";
                 }else if($campo["tipo_control"] == "checkbox"){
                     $data_entrada .= "\"".$campo["nombre"]."\": {\"type\": \"array\",\"items\": {\"type\": \"string\"}}";
                 }else if($campo["tipo"] == "date"){
@@ -80,14 +78,12 @@ class Swagger {
         }
         //Agregar las variables globales de salida
         if(isset($output_vars)){
-            foreach($output_vars['accionvar'] as $var){
-                log_message('debug','var: .'.$var.'.');
-                if($var != NULL && trim($var) != '' ){
-                    if($data_salida != "") {
-                        $data_salida .= ",";
-                    }
-                    $data_salida .= "\"".$var."\": {\"type\": \"string\"}";
-                }
+            //VARIABLES DE ACCION
+            if(isset($output_vars['accionvar'])){
+                $data_salida .= $this->crearOutputVars($output_vars['accionvar'], $data_salida);
+            }
+            if(isset($output_vars['formvar'])){
+                $data_salida .= $this->crearOutputVars($output_vars['formvar'], $data_salida);   
             }
         }
        
@@ -105,6 +101,7 @@ class Swagger {
                 $line = str_replace("-DATA_ENTRADA-", $data_entrada, $line);
                 $line = str_replace("-OUTPUT-",$data_salida,$line);
                 $line = str_replace("-HOST-", $nombre_host, $line);
+                $line = str_replace("-AUTH-", $this->estrucAutorizacion($id_etapa),$line);
                 $line = str_replace("-id_tramite-", $id_tramite, $line);
                 $line = str_replace("-id_tarea-", $id_etapa, $line);
                 $swagger .= $line;
@@ -116,7 +113,59 @@ class Swagger {
 
     }
     
-   
+    private function crearOutputVars($output_vars, $salida) {
+        if(!isset($output_vars))
+            return array();
+        $data_salida = $salida;
+        foreach ($output_vars as $var) {
+            if ($var != NULL && is_array($var)) {
+                if ($data_salida != "") {
+                    $data_salida .= ",";
+                }
+                if ($var['tipo']=='file' || $var['tipo'] =='documento' ){
+                    $data_salida .= "\"".$var['nombre']."\":".json_encode(array('type'=>'string','format'=>'base64'));
+                }else if($var['tipo']=='date'){
+                    $data_salida .= "\"".$var['nombre']."\":" .json_encode(array('type'=>'date'));
+                }else{
+                    $data_salida .= "\"".$var['nombre']."\":" .json_encode(array('type'=>'string'));
+                }
+            }
+        }
+        return $data_salida;
+    }
+
+    private function estrucAutorizacion($id_etapa){
+        $auth = '';
+        $tipo = $this->tipoAcceso($id_etapa);
+        $auth = ",\"identificacion\" : "; 
+        switch($tipo){
+        case 'registrados':
+        case 'grupo_usuarios':
+            $auth .= json_encode(array( "\$ref" => "#/definitions/simple"));
+            break;
+        case 'claveunica':
+            $auth .= json_encode(array( "\$ref" => "#/definitions/clave_unica"));
+            break;
+        default:
+            $auth = "";
+        }
+        return $auth;
+    }
+    
+    private function tipoAcceso($id_tarea){
+        try{
+            $result = Doctrine_Query::create()
+                ->from('Tarea a')
+                ->where('a.id = ? ', $id_tarea)
+                ->execute();
+            if( $result != NULL && count($result) > 0){
+                return $result[0]->acceso_modo;
+            }
+        }catch(Exception $e){
+            log_message('error',$e->getMessage());
+            return '';
+        }
+    }
     
     private function getOuputVarsSwagger($formulario,$proceso_id){
         log_message('debug',"Recuperando variables de salida: ".$proceso_id);
@@ -125,15 +174,18 @@ class Swagger {
         $retval = null;
         //Estas variables son las exportables como output
         if(isset($variables)){
+            
             foreach($variables as $var ){
-                $retval['formvar'][]=$var->nombre;
+                log_message('debug','Var exportable de form: '.$var->tipo);
+                $retval['formvar'][]=array('nombre' => $var->nombre,'tipo' => $var->tipo);
             }
+            
         }
         $accion_vars = Campo::getVarsAccionExpFromProceso($proceso_id);
         
         if(isset($accion_vars)){
             foreach($accion_vars as $var ){
-                $retval['accionvar'][] = $var->extra->variable;
+                $retval['accionvar'][] = array('nombre' => $var->extra->variable,'tipo' => 'string');
             }
         }
         return $retval;
